ing_pg/playground/pg_depl.yml
apiVersion: v1
kind: Namespace
metadata:
  name: pg05

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-pg
  namespace: pg05
spec:
  strategy: 
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: go-pg
  template:
    metadata:
      labels:
        app: go-pg
    spec:
      containers:
      - name: server
        image: bazdoc/go-pg:1.0
#        image: bazdoc/web_on_go:1.1
        ports:
        - containerPort: 8000
          name: web
