ing_pg/playground/pg_svc.yml
apiVersion: v1
kind: Service
metadata:
  namespace: pg05
  name: pg-svc
  annotations:
    metallb.universe.tf/loadBalancerIPs: 192.168.1.102
spec:
  type: LoadBalancer
  selector:
    app: go-pg
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8000
