ing_pg/playground/pg_ing.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: go-playground
  namespace: pg05
spec:
  ingressClassName: nginx
  rules:
  - host: pg05.test
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: playground-svc
            port:
              number: 8000
